@@ -3,6 +3,8 @@ History
 -------
 
 Latest snapshot:
+	* A function of canonical lanuage name has been fixed. The languages with names below "ru" in lexical order were affected.
+	* The maximim length of log records has been enlarged to 480 bytes, the MUST size for a syslog message.
 	* MaxHrefsPerServer command has been added. Uset it to limit the maximum number of hrefs accepted per server during one indexer run.
 	* Limit command has been extended to accept SQL-based limits.
 	
